# SuPyReleases

./: .git-blame-ignore-revs  .projections.json  README.md  pyproject.toml
data/tumor/: gtWD.csv  standard.csv
docs/source/: conf.py  index.rst
docs/source/_templates/autosummary/: class.rst  module.rst
scripts/: charm.py  diabetes_T2Lee.py  lorenz63.py  new_tumor_ribba.py  su.py  tumor_ribba.py  tumor_wd.py
scripts/example/: ode_lotka_volterra.py  ode_trivial.py
src/supy/: __init__.py  amb.py  asynciter.py  experiment.py  interval.py  ode.py  plot.py  problem.py  report.py  timeAwareAssimilation.py  trace.py  utils.py
src/supy/assimilation/: __init__.py  abc.py  adao.py  evolution.py  problem.py
src/supy/datatree/: __init__.py  amb.py  tree.py
src/supy/meta/: __init__.py  _data.py  _register.py  annotations.py
src/supy/problems/: __init__.py  base.py  diabetes.py  handy.py  lorenz.py  tumor.py  tumor2.py  utils.py
src/supy/strategies/: __init__.py  assimilated.py  cpt.py  nudged.py  single.py  weighted.py
tests/: test_amb.py  test_async_buffer.py  test_async_dict.py  test_async_pushiterator.py  test_interval.py  test_ode.py  test_problem.py  test_utils.py
tests/assimilation/: conftest.py  test_abc.py  test_adao.py  test_evolution.py  test_legacy.py
tests/datatree/: test_from_amb.py  test_tree.py
tests/meta/: conftest.py  test_event.py  test_ode.py
